--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                           <p>Sinta-se à vontade para navegar pelo meu portfólio e entrar em contato comigo para discutir como posso ajudá-lo a atingir seus objetivos.</p>
                          <div class="social">
                          <a href="https://instagram.com/ryan_zanardo?igshid=ZDdkNTZiNTM="><span><i class="fa-brands fa-instagram"></i></span></a>
-                         <a href="https://web.whatsapp.com/send?phone=67998449141"><span><i class="fa-brands fa-whatsapp"></i></span></a>
+                         <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5567998449741"><span><i class="fa-brands fa-whatsapp"></i></span></a>
                          <a href="#"><span><i class="fa-brands fa-square-facebook"></i></span></a>
                          </div>
                     </div>
