--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                       <li></li>
                       </ul>
                </div> <!--===== Section Title =====-->
-                      <p>Sou um profissional altamente experiente e apaixonado pelo que faço. Minha abordagem criativa e habilidades técnicas me permitem criar soluções eficazes e inovadoras para qualquer projeto que eu esteja trabalhando.Meu objetivo é sempre fornecer resultados de alta qualidade e exceder as expectativas dos meus clientes.</p>
+                      <p>Sou um profissional apaixonado pelo que faço. Minha abordagem criativa e habilidades técnicas me permitem criar soluções eficazes e inovadoras para qualquer projeto que eu esteja trabalhando.Meu objetivo é sempre fornecer resultados de alta qualidade e exceder as expectativas dos meus clientes.</p>
                     <div class="skills">
                          <div class="about-skills">
                               <div class="skill-item">
                                    <div class="skill-header">
                                         <h6 class="skill-tittle"> UI/Ux Design</h6>
                                         <div class="skill-porcentagem">
-                                             <p><span class="counter">80</span>%</p>
+                                             <p><span class="counter">50</span>%</p>
                                         </div>
                                    </div>
                                    <div class="skill-bar">
                                         <div class="bar-inner">
-                                             <div class="bar progress-line" data-progress="80%"></div>
+                                             <div class="bar progress-line" data-progress="50%"></div>
                                         </div>
                                    </div>
                               </div> 
@@ -87,12 +87,12 @@
                                    <div class="skill-header">
                                         <h6 class="skill-tittle"> HTML/CSS</h6>
                                         <div class="skill-porcentagem">
-                                             <p><span class="counter">80</span>%</p>
+                                             <p><span class="counter">70</span>%</p>
                                         </div>
                                    </div>
                                    <div class="skill-bar">
                                         <div class="bar-inner">
-                                             <div class="bar progress-line" data-progress="80%"></div>
+                                             <div class="bar progress-line" data-progress="70%"></div>
                                         </div>
                                    </div>
                               </div> 
@@ -115,12 +115,12 @@
                                    <div class="skill-header">
                                         <h6 class="skill-tittle"> JavaScript</h6>
                                         <div class="skill-porcentagem">
-                                             <p><span class="counter">50</span>%</p>
+                                             <p><span class="counter">30</span>%</p>
                                         </div>
                                    </div>
                                    <div class="skill-bar">
                                         <div class="bar-inner">
-                                             <div class="bar progress-line" data-progress="50%"></div>
+                                             <div class="bar progress-line" data-progress="30%"></div>
                                         </div>
                                    </div>
                               </div> 
