--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                       <!--portifolio item 1-->
                <div class="port-item">
                     <div class="port-img">
-                         <img src="./assets/coming-soon-ge3806cddf_1280.jpg">
+                         <img src="./assets/Captura de tela 2023-03-03 024309.png">
                     </div>
                     <div class="port-info">
                          <h4>Criptografia</h4>
